--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,5 +1,5 @@
-texteditor (1.0.0) unstable; urgency=low
+exnote (1.0.0) unstable; urgency=low
 
   * Public release
 
- -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sat, 12 May 2012 18:27:16 +0200
+ -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Mon, 21 May 2012 20:12:16 +0200
