--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+exnote (1.0.1) unstable; urgency=low
+  * UI fixes
+
+ -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Tue, 29 May 2012 17:28:00 +0200
+
 exnote (1.0.0) unstable; urgency=low
 
   * Public release
