--- a/qtc_packaging/debian_harmattan/changelog
+++ b/qtc_packaging/debian_harmattan/changelog
@@ -1,3 +1,8 @@
+exnote (1.0.2) unstable; urgency=low
+  * Bug fixes
+
+ -- Tomasz Pieniążek <t.pieniazek@gazeta.pl>  Sat, 09 Jun 2012 21:35:52 +0200
+
 exnote (1.0.1) unstable; urgency=low
   * UI fixes
 
